# wise-snakes-and-harmless-doves

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _README.rst  bash_refs.sh  handy_commands.md  manage.py  pyproject.toml  pytest.ini  setup.cfg  zen_primer.py
.github/: labeler.yml
.github/workflows/: ci-primer.yml  label.yml
config/: api_router.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
snakes_n_doves/: conftest.py
snakes_n_doves/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
snakes_n_doves/templates/: base.html
snakes_n_doves/templates/account/: email.html
snakes_n_doves/users/: admin.py  apps.py  context_processors.py  models.py  urls.py
snakes_n_doves/users/migrations/: 0001_initial.py
snakes_n_doves/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
