[tool.poetry]
name = "wise-snakes-and-harmless-doves"
version = "0.1.0"
description = "Web, single-/multiplayer board-like strategy game (2D), turn-based/simultaneously played"
authors = ["Ivan Prytula"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
django-compressor = "^4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
django-debug-toolbar = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
