[tool.poetry]
name = "wise-snakes-and-harmless-doves"
version = "0.1.0"
description = "Web, single-/multiplayer board-like strategy game (2D), turn-based/simultaneously played"
authors = ["Ivan Prytula"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "3.13.1"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
django-compressor = "4.0"
argon2-cffi = "^21.3.0"
django-redis = "^5.2.0"
django-storages = "^1.12.3"
rcssmin = "1.1.0"
drf-spectacular = "0.22.1"
django-allauth = "0.50.0"
django-cors-headers = "3.11.0"
pytest-django = "4.5.2"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.6"
factory-boy = "3.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
django-debug-toolbar = "^3.4.0"
django-extensions = "^3.1.5"
pytest = "^7.1.2"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
